--- a/guestbook-entry/.project
+++ b/guestbook-entry/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>guestbook-portlet</name>
+	<name>guestbook-entry</name>
 	<comment></comment>
 	<projects>
 	</projects>
