--- a/guestbook-entry/pom.xml
+++ b/guestbook-entry/pom.xml
@@ -3,9 +3,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.roxel</groupId>
-	<artifactId>guestbook-portlet</artifactId>
+	<artifactId>guestbook-entry</artifactId>
 	<packaging>war</packaging>
-	<name>guestbook-portlet Portlet</name>
+	<name>guestbook-entry Portlet</name>
 	<version>1.0.0-SNAPSHOT</version>
 	<build>
 		<plugins>
